# Chain

./: .gitignore  .pre-commit-config.yaml  .py  .sourcery.yaml  Agent.py  CHANGELOG.md  Chain.py  Course_Data.py  Course_Descriptions.py  Create_VDB.py  Dockerfile  Dockerfile.base  README.md  Retriever.py  __init__.py  ask.py  ask_wrapper.sh  async_claude.py  async_example.py  chain_curation.py  course_chatbot_Librarian.py  course_metadata.py  error.txt  errors.txt  es.find() if name == 'mike'])  example.db  fixes.md  gemini.py  main.py  model.py  model_test.py  mongodb_example.py  multiple_embeddings.py  new_query.py  note_about_v1.md  ollama_example_instructor.py  output.txt  parser_test.py  partner_strategy.py  pyproject.toml  (+4 more)
CLI/: cli.py
Chain.egg-info/: PKG-INFO  SOURCES.txt
api/client/: ChainClient.py  distributed.py
api/server/: ChainRequest.py  ChainServer.py  fastapi_example.py  run.py  test_ChainServer.py
archaeology/: Agent.py  VectorStore.py  big_txt.txt  embeddings_benchmarks.py  results.json
cache/: .example.db-journal  cache.py  cacheable.py  qwq_recommendations.md  test_cache.py
chain/: 1  async.py  async_openaiclient.py  asyncchain.py  chain.py  output.stats
chain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
chain_framework.egg-info/: PKG-INFO  SOURCES.txt
chainml/notes/: promptflow.md
chains/: agent.py  chain_RAG.py  chain_curation.py  chain_role_progression.py  chain_structured_curation.py  chains.md  coaching_courses  coaching_courses.py  course_chatbot.py  course_chatbot_Librarian.py  job_titles.txt  sandbox.py  sophie.py  system_prompt.py  system_prompt2.py
chat/: chat.py
cli/: cli.py
clients/: ollama_context_sizes.json  openai_client.py
compose/: chainml.py
compose/notes/: notes.md
decorator/: __init__.py  decorator.py  notes.md
docs/: param_options.md
html/: Chain.html
logging/: logging_config.py
magnus/: magnus.py
markup/: example_chain.py
mcp/: readme.md
mcp-lite/: MCPMessage.py  mcplite.py  mvp.py  readme.md
mcp/client/: mcp_system_prompt.jinja  test_client.py
mcp/server/: MCP.py  MCPPrompt.py  MCPResource.py  MCPTool.py  Prompt.py  Resource.py  Tool.py  mcp.py
message/: __init__.py  audio.py  audiomessage.py  example.m4a  imagemessage.py  message.py  messages.py  messagestore.py  notes.py  test_audio.py  textmessage.py
message/speedometer/: notes.md
model/:   aliases.json  model.py  model_async.py  model_client.py  model_proxy.py  proxymodel_implementation.md  server_model.py  test.py
model/clients/: .cache.db  :  OLD_huggingface_client.py  anthropic_client.py  client.py  deepseek_client.py  google_client.py  groq_client.py  huggingface_client.py  image_test.py  instruct.py  models.json  ollama_boilerplate.py  ollama_client.py  ollama_context_sizes.json  openai_client.py  perplexity_client.py  server_client.py  test.py  todo.md
model/models/: ModelSpec.py  ModelStore-DEPRECATED.py  aliases.json  diagram.md  get_modelspec.py  models.json  models.py  modelspec.py  modelspecs.json  modelspecs_CRUD.py  modelstore.py  notes.md  ollama_context_sizes.json  research.py  research_models.py  validate_spec.py
model/params/: 23  clientparams.py  params.py
models/: obsidian.py  serp_api.py  youtube.py
multimodal/: design_spec.md
multimodal/imagegen/: gemini.py  gpt.py  hf.py  main.py  notes.md
multimodal/tts/: factory.py  tts_chatTTS.py  tts_gemini.py
my_project.egg-info/: SOURCES.txt
odometer/: ConversationOdometer.py  OdometerRegistry.py  PersistentOdometer.py  TokenEvent.py  design_spec.md  odometer.py
odometer/database/: PGRES_tokens.py
odometer/database/pgres/: PGRES_connection.py  PostgresBackend.py  snapshot.py  wipe_database.py
parser/: parser.py
progress/: design_spec.md  display_mixins.py  handlers.py  notes.md  tracker.py  verbosity.py  wrappers.py
prompt/: prompt.py  prompt_loader.py
react/: Resource.py  Tool.py  one_shot_react.py  react_chain.py  streaming.py  three_shot_react.py
request/: request.py
response/: response.py
result/: error.py  error_notes.md  response.py
scripts/: imagegen.py  models_cli.py  qwen.py  update_ollama_list.py
tests/: async_test.py  claude_tests_REVIEW_HITL.py  model_test.py  parser_test.py  test_Chain.py  test_ChainServer.py  test_Chain_claude_version.py  test_Course_Data.py  test_Embeddings.py  test_async.py  test_audio.py  test_cache.py  test_chain.py  test_course_descriptions.py  test_image_message.py  test_list_parser.py  test_model.py  test_response.py  v.py
tests/cache/: debug.py  debug_cache.db  test1.py  test2.py  test3.py  test4.py  test_cache.py  test_chain_cache.db  test_structured_cache.db  test_sync_cache.db
tests/fixtures/: __init__.py  sample_models.py  sample_objects.py
tests/old/: example.db  manual_test_apis.py  old_test_model.py  test_ChainServer.py  test_list_parser.py
tests/ollama/: ollama_test.py
tests/params/: test_params.py
tests/progress/: chain_display.py  test2.py  test_async_wrapper.py  test_asyncchain.py  test_concurrent.py  test_console.py  test_handlers.py  test_spinner.py  test_wrapper.py
tests/regression/: test_audio.py  test_image.py  test_local.py  test_params.py  test_serialization.py
tests/serialization/: serialization.py  test_cacheable_serialization.py  test_serialization.py
tts/: tts_openai.py
v2/: __init__.py  client.py  message.py  message_store.py  model.py  models.json  ollama_models.json  parser.py  prompt.py  test.py
v2/clients/: client.py  ollama_client.py  openai_client.py
vectordbs/: vectordbs.md
