[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chain"
version = "3.0.0"
description = "A lightweight, unified framework for building LLM applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "pydantic",
    "jinja2",
    "rich",
    "tiktoken",
    "instructor",
    "tinydb",
    "python-dotenv",
    # LLM Provider SDKs
    "openai",
    "anthropic",
    "google-generativeai",
    "ollama",
    # Audio/Image Processing
    "pydub",
    "pillow",
    "soundfile",
    # Machine Learning/AI
    "torch==2.7.1", # Pinned for your GPU setup
    "transformers",
    "huggingface_hub",
    # Web/HTTP
    "requests",
    "fastapi",
    "uvicorn",
    # Data Processing
    "numpy",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
    "diffusers>=0.34.0",
    "peft>=0.16.0",
    "accelerator>=2024.9.13",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
tts = [
    # Add when these become available on PyPI
    # "ChatTTS",
    # "bark", 
    # "elevenlabs",
]
full = [
    "pandas",
    "matplotlib", 
    "tensorflow",
    "mammoth",
]

[project.scripts]
update = "Chain.scripts.update_modelstore:main"
update_ollama = "Chain.scripts.update_ollama_list:main"
models = "Chain.scripts.models_cli:main"
chat = "Chain.chat.chat:main"
chainserver = "Chain.api.server.run:main"

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

# Hatchling configuration (replaces setuptools.packages.find)
[tool.hatch.build.targets.wheel]
packages = ["Chain"]
